Some tex + css fixes

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,6 @@ code {
   width: 0px; /* Mostly for vertical scrollbars */
   height: 0px; /* Mostly for horizontal scrollbars */
 }
+html {
+  scroll-behavior: smooth;
+}
